--- a/index.html
+++ b/index.html
@@ -1,1 +1,151 @@
-Hello World updated
+
+<HTML>
+<Title> Homepage for Thomas Walsh </Title>
+
+<BODY>
+<Table> <tr>
+        <td> <img src="tom_walsh.jpg" alt="me" height="20%" width="20%" ></td>
+</tr>
+<tr><td align="left"><font size=5><b>Thomas Walsh</b></font><br><b>thomasjwalsh [ at ]  gmail {dot} com</b> </td></tr>
+<tr>
+
+</table>
+
+<br><br>
+
+<font color="red" size=5> <b> Research and Current Position </b></font> <br>
+I am currently a Senior Research Scientist at <a href="https://ai.sony/"> Sony AI</a>, exploring new applications of cutting-edge AI and reinforcement learning techniques.  Previously, I worked in several academic and industry jobs investigating AI, data science, and sequential decision making techniques including leading a team of researchers at <a href="http://www.kronos.com">Kronos Incorporated (now UKG)</a>, and holding research positions at <a href="http://acl.mit.edu/">MIT</a>, <a href="https://cete.ku.edu/">The University of Kansas</a>, <a href="https://www.cs.arizona.edu/">The University of Arizona</a>, and <a href="https://www.cs.rutgers.edu/">Rutgers University</a> (as one of <a href="http://cs.brown.edu/~mlittman/">Michael Littman</a>'s students), and my undergrad research at <a href="http://maple.cs.umbc.edu/">UMBC</a>.  You can find publications from my research below or for a  quick tour here is a copy of my <a href="./cv/tomWalshCVWeb.pdf"> CV </a>.
+<br>
+<br>
+
+
+<font color="red" size=5> <b>Publications </b></font> <br>
+
+<h2>Journal Articles</h2>
+<p>
+Varun Kompella, Thomas J. Walsh, Samuel Barrett, Peter R. Wurman, Peter Stone <a href="https://arxiv.org/pdf/2211.00576">Event Tables for Efficient Experience Replay</a> Transactions on Machine Learning Research (TMLR), 2023.
+<br><br>
+Peter R. Wurman, Samuel Barrett, Kenta Kawamoto, James MacGlashan, Kaushik Subramanian, Thomas J. Walsh, Roberto Capobianco, Alisa Devlic, Franziska Eckert, Florian Fuchs, Leilani Gilpin, Piyush Khandelwal, Varun Kompella, HaoChih Lin, Patrick MacAlpine, Declan Oller, Takuma Seno, Craig Sherstan, Michael D. Thomure, Houmehr Aghabozorgi, Leon Barrett, Rory Douglas, Dion Whitehead, Peter Dürr, Peter Stone, Michael Spranger, Hiroaki Kitano <a href="https://www.nature.com/articles/s41586-021-04357-7">Outracing champion Gran Turismo drivers with deep reinforcement learning</a> Nature 602 223-228, 2022.
+<br><br>
+Robert C. Grande, Thomas J. Walsh, Girish Chowdhary, Sarah Ferguson, Jonathan P. How. <a href="./pub/tnnlsFinal.pdf">Online Regression for Data with Changepoints using Gaussian Processes and Reusable Models</a>  IEEE Transactions on Neural Networks and Learning Systems, 2016.
+<ul> <li>Note: Lemma 1 in the GP paper linked above makes the unstated assumption that a GP is an unbiased estimator of the mean of the target function.  In cases where a bias is introduced, an additional bias error term would be added to the result.
+</ul>
+Mark Cutler, Thomas J. Walsh, Jonathan P. How. <a href="./pub/Cutler15TRO.pdf">Real-World Reinforcement Learning via Multi-Fidelity Simulators</a>. IEEE Transactions on Robotics (TRO), 2015.
+<br><br>
+Bernard Michini, Thomas J. Walsh, Ali-akbar Agha-mohammadi, and Jonathan P. How.<a href="./pub/Michini15TRO.pdf">Bayesian Nonparametric Reward Learning from Demonstration</a> IEEE Transactions on Robotics (TRO), 2015.
+<br><br>
+Girish Chowdhary, Miao Liu, Robert C. Grande, Thomas J. Walsh, Jonathan P. How and Lawerence Cairn.  "Off-Policy Reinforcement Learning with Gaussian Processes". Accepted in Acta Automatica Sinica, 2014.
+<br><br>
+Alborz Geramifard, Thomas J. Walsh, Stefanie Tellex, Girish Chowdhary, Nicholas Roy, and Jonathan P. How. <a href="./pub/Geramifard13Tutorial.pdf"> A Tutorial on Linear Function Approximators for Dynamic Programming and Reinforcement Learning</a> Foundations and Trends in Machine Learning (FTML), 2013.
+<br><br>
+Thomas J. Walsh, Michael L. Littman, and Alexander Borgida <a href="./pub/wias11Learning.pdf"> Learning Web-Service Task Descriptions from Traces</a> Web Intelligence and Agent Systems, Volume 10, Number 4, (pages 397-421), 2012.
+<br><br>
+Lihong Li, Michael L. Littman, Thomas J. Walsh, and Alexander L. Strehl <a href="./pub/Li11Knows.pdf"> Knows what it knows: A framework for self-aware learning.</a>  Machine Learning, Volume 82, Number 3, (pages 399-443), 2011. 
+<br><br>
+Fusun Yaman, Thomas J. Walsh, Michael L. Littman, Marie desJardins <a href="./pub/Yaman11Democratic.pdf"> Democratic Approximation of Lexicographic Preference Models </a>  Artificial Intelligence, Special Issue on Representing, Processing, and Learning Preferences, Volume 175 (pages 1290-1307), 2011.
+<br><br>
+Thomas J. Walsh, Ali Nouri, Lihong Li, and Michael L. Littman <a href="./pub/jaamas09Delayed.pdf"> Learning and Planning in Environments with Delayed Feedback</a> In the Journal of Autonomous Agents and Multi-Agent Systems, Volume 18, Issue1, (pages 83-101),  February, 2009.
+<br><br>
+Dennis D.Y. Kim, Thomas T.Y. Kim, Thomas Walsh, Yoshifumi Kobayashi, Tara C. Matise, Steven Buyske, and Abram Gabriel
+    <a href="http://www.genome.org/cgi/content/full/14/9/1719">Widespread RNA Editing of Embedded Alu Elements in the Human Transcriptome</a>
+    Genome Res. 2004 14 (September): 1719-1725.
+<br><br>
+</p>
+
+<h2>Conference Papers</h2>
+<p>
+Dustin Morrill, Thomas J. Walsh, Daniel Hernandez, Peter R. Wurman, Peter Stone. <a href="https://arxiv.org/pdf/2306.07372">Composing Efficient, Robust Tests for Policy Selection</a> In Proceedings of the Conference on Uncertainty in Artificial Intelligence (UAI-23), 2023.
+<br><br>
+Robert C. Grande, Thomas J. Walsh, Jonathan P. How. <a href="./pub/icml2014GP.pdf">Sample Efficient Reinforcement Learning with Gaussian Processes</a> In Proceedings of the International Conference on Machine Learning (ICML-14), Beijing, China, 2014.<li> Appendix available <a href="./pub/icml2014Sup.pdf">here</a> 
+<ul> <li>Note: Lemma 1 in the GP paper linked above makes the unstated assumption that a GP is an unbiased estimator of the mean of the target function.  In cases where a bias is introduced, an additional bias error term would be added to the result.
+</ul>
+<br>
+Mark Cutler, Thomas J. Walsh, Jonathan P. How. <a href="./pub/icra2014Car.pdf">Reinforcement Learning with Multi-Fidelity Simulators</a> In Proceedings of the International Conference on Robotics and Automation (ICRA-14), Hong Kong, 2014.
+<br><br>
+Alborz Geramifard, Thomas J. Walsh, Nicholas Roy, and Jonathan P. How. <a href="./pub/13UAI-BatchiFDD.pdf">Batch-iFDD for Representation Expansion in Large MDPs</a> In Proceedings of the Conference on Uncertainty in Artificial Intelligence (UAI-13), Bellevue, WA, 2013.
+<br><br>
+Thomas J. Walsh and Sergiu Goschin. <a href="./pub/uai12Dynamic.pdf">Dynamic Teaching in Sequential Decision Making Environments</a> In Proceedings of theConference on Uncertainty in Artificial Intelligence (UAI-12), Catalina, CA, 2012.
+<li>Appendix available <a href="./pub/uai12DynamicSup.pdf">here</a>.
+<br><br>
+Thomas J. Walsh, Daniel Hewlett, and Clayton T. Morrison <a href="./pub/nips11Blending.pdf">Blending Autonomous Exploration and Apprenticeship Learning</a> In Proceedings of the Twenty-Fifth Annual Conference on Neural Information Processing Systems (NIPS-11), Granada, Spain, 2011.
+<li>Also appeared at the 2011 RSS Workshop on the State of Imitation Learning.
+<br><br>
+Derek T. Green, Thomas J. Walsh, Paul R. Cohen and Yu-Han Chang. <a href="./pub/iaai11Learning.pdf">Learning a Skill-Teaching Curriculum with Dynamic Bayes Nets</a>  In Proceedings of the Twenty-Third Conference on Innovative Applications of Artificial Intelligence (IAAI-11), San Francisco, CA, 2011.
+<br><br>
+Daniel Hewlett, Thomas J. Walsh, and Paul R. Cohen. <a href="./pub/icdl11Teaching.pdf">Teaching and Executing Verb Phrases</a>  In Proceedings of the First Joint IEEE International Conference on Development and Learning and on Epigenetic Robotics (ICDL-Epirob-11), Frankfurt, Germany, 2011.
+<br>
+<li> Also appeared at the RSS Workshop on the State of Imitation learning and the AAAI Spring Symposium on Bridging the Gaps in Human-Agent Collaboration.
+<br><br>
+Raquel Torres Peralta, Tasneem Kaochar, Ian R. Fasel, Clayton T. Morrison, Thomas J. Walsh, Paul R. Cohen. <a href="./pub/roman11Challenges.pdf">Challenges to Decoding the Intention Behind Natural Instruction</a>  In Proceedings of the IEEE International Symposium on Robots and Human Interactive Communications (RO-MAN-2011), Atlanta, GA, 2011.
+<br><br>
+Derek T. Green, Thomas J. Walsh, Paul R. Cohen, Carole R. Beal and Yu-han Chang. "Gender Differences and the Value of Choice in Intelligent Tutoring Systems".  In Proceedings of User Modeling, Adaptation and Personalization (UMAP-2011), Girona, Spain, 2011.
+<br><br>
+Tasneem Kaochar, Raquel Torres Peralta, Ian R. Fasel, Clayton T. Morrison, Thomas J. Walsh, Paul R. Cohen <a href="./pub/umap11Towards.pdf"> Towards Understanding How Humans Teach Robots</a>  In Proceedings of User Modeling, Adaptation and Personalization (UMAP-2011), Girona, Spain, 2011.
+<li> Versions also appeared at the AAAI Spring Symposium on Bridging the Gaps in Human-Agent Collaboration and the 2011  Workshop on Agents Learning Interactively from Human Teachers (ALIHT) at IJCAI-2011.
+<br><br>
+Thomas J. Walsh, Sergiu Goshin, and Michael L. Littman <a href="./pub/aaai10Integrating.pdf"> Integrating Sample-based Planning and Model-based Reinforcement Learning </a> In Proceedings of the Twenty-Fourth AAAI Conference on Artificial Intelligence (AAAI-10), Atlanta, GA, 2010.
+<br><br>
+Thomas J. Walsh, Kaushik Subramanian, Michael L. Littman, and Carlos Diuk <a href="./pub/icml10Generalizing.pdf"> Generalizing Apprenticeship Learning across Hypothesis Classes </a>  In Proceedings of the Twenty-Seventh International Conference on Machine Learning (ICML-10), Haifa, Israel, 2010.
+<br>
+<li> Also appeared at the 2010 Workshop on Agents Learning Interactively from Human Teachers (ALIHT) at AAMAS-10.
+<br><br>
+Thomas J. Walsh, Istv&aacute;n Szita, Carlos Diuk, and Michael L. Littman <a href="./pub/uai09Linear.pdf"> Exploring Compact Reinforcement-Learning Representations
+with Linear Regression</a> In Proceedings of the 25th Conference on Uncertainty in Artificial Intelligence (UAI-09), Montreal, Quebec, 2009.
+<br>
+<li> A <a href="http://www.cs.rutgers.edu/research/technical_reports/report.php?series_id=1&report_id=660">Tech Report</a> is available for this paper that corrects the bounds reported in the conference version (with full proofs).
+<br>
+<br>
+Thomas J. Walsh and Michael L. Littman <a href="./pub/aaai08.pdf"> Efficient Learning of Action Schemas and Web-Service Descriptions</a> In Proceedings of the Twenty-Third AAAI Conference on Artificial Intelligence (AAAI-08), Chicago, IL, 2008.
+<br>
+<li>Expanded version available as a <a href="./pub/techReport08.pdf"> Technical Report </a>
+<br><br>
+Lihong Li, Michael L. Littman, Thomas J. Walsh <a href="./pub/icml08Kwik.pdf"> Knows What It Knows: A Framework for Self-Aware Learning </a> In Proceedings of the Twenty-Fifth International Conference on Machine Learning (ICML-08), Helsinki, Finland, 2008.
+<br>
+<li> Co-winner of the <i>ICML 2008 Best Student Paper Award</i>
+<br><br>
+Fusun Yaman, Thomas J. Walsh, Michael L. Littman, Marie desJardins <a href="./pub/icml08Pref.pdf"> Democratic Approximation of Lexicographic Preference Models </a> In Proceedings of the Twenty-Fifth International Conference on Machine Learning (ICML-08), Helsinki, Finland, 2008.
+<br>
+<li> Also appeared at the 4th Multidisciplinary Workshop on Advances in Preference Handling at AAAI-08.
+<br><br>
+Thommas J. Walsh, Ali Nouri, Lihong Li, and Michael L. Littman <a href="./pub/ecml07Delayed.pdf"> Planning and Learning in Environments with Delayed Feedback </a> In Proceedings of the 18th European Conference on Machine Learning (ECML-07),
+Warsaw, Poland, 2007.
+<br><br>
+Lihong Li, Thomas J. Walsh, and Michael L. Littman <a href="./pub/aima06Towards.pdf"> Towards a Unified Theory of State Abstraction for MDPs</a> Proceedings of the Ninth International Symposium on Artificial Intelligence and Mathematics (AIMA06), Ft. Lauderdale, FL, 2006.
+<br><br>
+Bethany R. Leffler, Michael L. Littman, Alexander L. Strehl, Thomas J. Walsh. <a href="./pub/rss05Efficient.pdf"> Efficient Exploration With Latent Structure</a> In Proceedings of Robotics: Science and Systems. Cambridge, Massachusetts, 2005.
+<br>
+<br>
+</p>
+
+<h2>Thesis</h2>
+Thomas J. Walsh.  <a href="./pub/thesis.pdf">Efficient Learning of Relational Models for Sequential Decision Making</a> (also available <a href="./pub/thesis_nohyper.pdf">without hyperlinks</a>). 
+<br><br>
+
+<h2>Other Publications (Workshops, Magazines, Special Publications)</h2>
+<p>
+Thomas J. Walsh, Javad Taheri, Jeremy B. Wright and Paul R. Cohen. <a href="./pub/aaai11Leadership.pdf">Leadership Games and their Application in Super-Peer Networks</a> AAAI Workshop on Applied Adversarial Reasoning and Risk Modeling, San Francisco, CA, 2011.
+<br><br>
+Thomas J. Walsh and Michael L. Littman <a href="./pub/aaai07Wkshp1.pdf"> Planning with Conceptual Models Mined from User Behavior </a> In Proceedings of the AAAI-07 Workshop on Acquiring Planning Knowledge via Demonstration, Vancouver, BC, 2007.
+<br><br>
+Thomas J. Walsh, Lihong Li, and Michael L. Littman <a href="./pub/transferWorkshop.pdf"> Transferring State Abstractions Between MDPs </a> In Proceeding of the ICML-06 Workshop on Structural
+Knowledge Transfer for Machine Learning, Pittsburgh, PA, 2006.
+<br><br>
+Alex Borgida, Thomas J. Walsh, and Haym Hirsh. <a href="./pub/dl05_paper25.pdf">Towards Measuring Similarity in Description Logics </a>In  Proceedings of the 2005 International Workshop on Description Logics (DL2005), Edinburgh, Scotland, 2005.
+<br><br>
+Thomas J. Walsh and D. Richard Kuhn. <a href="http://ieeexplore.ieee.org/iel5/8013/31002/01439501.pdf?isnumber=31002&prod=JNL&arnumber=1439501&arSt=+44&ared=+49&arAuthor=+Walsh%2C+T.J.%3B++Kuhn%2C+D.R."> Challenges in Securing Voice over IP</a> IEEE Security & Privacy. Vol 3(3) 2005 (May/June) : 44-49.
+<br><br>
+D. Richard Kuhn, Thomas J. Walsh, Steffen Fries.
+<a href="http://csrc.nist.gov/publications/nistpubs/800-58/SP800-58-final.pdf"> Security Considerations for Voice Over IP Systems </a> Special Publication from the National Institute of Standards and Technology, 2005 [final version!] (slash-dotted on 5/6/2005 <a href="http://it.slashdot.org/it/05/05/06/014259.shtml?tid=172&tid=215&tid=218" >here</a>).
+<br><br>
+
+</p>
+<br><br>
+Here's a video of RL in action (implemented with the help of many others in the RL^3 Lab back in 2005) on a Sony Aibo trying to escape from a darkened room.  It is pretty dated by today's standards, but exhibits some interesting core concepts. <a href="http://www.youtube.com/watch?v=pC1-qXBzPwA">Video</Video></a>  
+<br>
+A webpage with more info on the task is here: <a href="./aibo/aiboRescue.html">Explanation</a> 
+
+</BODY>
+
+</HTML>
+
+
